# OS_theory

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: 01_requirements_coding_agent.yml  02_design_coding_agent.yml  03_scaffold_coding_agent.yml
251227/OS/configs/: paper_refactored.yaml
251227/OS/docs/: jrsi_paper_rewritten_jp.tex
251227/OS/scripts/: generate_paper_charts_refactored.py
251227/OS/src/synthesis/: synth_os.py
configs/: default.yaml
data/: batch_processing_results.json  resolved_places.json
scripts/: batch_process_places.py  create_issues.sh  run_acquisition.py  run_analysis.py  run_dashboard.py
src/: __init__.py
src/acquisition/: __init__.py  overture_fetcher.py
src/analysis/: __init__.py  lacunarity.py  multifractal.py  percolation.py
src/preprocessing/: __init__.py  network_builder.py  rasterizer.py
src/projection/: __init__.py  aeqd_transformer.py
src/visualization/: __init__.py  comparison_dashboard.py  dashboard.py
tests/: __init__.py  test_analysis.py  test_projection.py  test_rasterizer.py
